// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Features - LaNacion - 10 - Radio black background variant should match snapshot 1`] = `
<div>
  <div>
    <div
      data-tw="true"
    >
      <div
        class="w-full mt-72 pt-24 border-t border-neutral-950"
      >
        <div
          class="relative flex items-center justify-between gap-24 py-32 px-16 md:p-32 bg-[url("/pf/resources/images/ln-fondo-radio-negro.webp")]"
        >
          <div
            class="flex gap-16 items-center z-10"
          >
            <img
              alt="Imagen de radio"
              class="h-48 md:h-71"
              loading="lazy"
              src="/test-path/resources/images/ln-radio-blanco.svg"
            />
            <span
              class="hidden md:block text-body-lg text-neutral-1"
            >
              El mundo necesita más música
            </span>
          </div>
          <a
            class="ds-button relative overflow-hidden inline-flex items-center justify-center gap-8 whitespace-nowrap transition-colors cursor-pointer [&_svg]:pointer-events-none [&_svg]:shrink-0 font-bold uppercase rounded-80 text-12 md:text-16 z-10 px-16 py-12 bg-[#D6E903] text-base-default"
            data-disabled="false"
            href="https://masmusica.lanacion.com.ar/"
            rel="noreferrer"
            target="_blank"
            title="Ir a escuchar más música"
          >
            Escuchá + música
            <mock-ds-common-icon
              class="hidden md:block"
              name="play-filled"
              size="20"
            />
          </a>
        </div>
        <hr
          aria-orientation="horizontal"
          class="ds-divider border-0 bg-muted w-full h-1"
          role="separator"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Features - LaNacion - 10 - Radio white background variant should match snapshot 1`] = `
<div>
  <div>
    <div
      data-tw="true"
    >
      <div
        class="w-full mt-72 pt-24 border-t border-neutral-950"
      >
        <div
          class="relative flex items-center justify-between gap-24 py-32 px-16 md:p-32"
        >
          <div
            class="flex gap-16 items-center z-10"
          >
            <img
              alt="Imagen de radio"
              class="h-48 md:h-71"
              loading="lazy"
              src="/test-path/resources/images/ln-radio.svg"
            />
            <span
              class="hidden md:block text-body-lg font-bold"
            >
              El mundo necesita más música
            </span>
          </div>
          <a
            class="ds-button relative overflow-hidden inline-flex items-center justify-center gap-8 whitespace-nowrap transition-colors cursor-pointer [&_svg]:pointer-events-none [&_svg]:shrink-0 font-bold uppercase rounded-80 text-12 md:text-16 z-10 px-16 py-12 bg-black-default text-ln-radio"
            data-disabled="false"
            href="https://masmusica.lanacion.com.ar/"
            rel="noreferrer"
            target="_blank"
            title="Ir a escuchar más música"
          >
            Escuchá + música
            <mock-ds-common-icon
              class="hidden md:block"
              name="play-filled"
              size="20"
            />
          </a>
        </div>
        <hr
          aria-orientation="horizontal"
          class="ds-divider border-0 bg-muted w-full h-1"
          role="separator"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Features - LaNacion - 10 - Radio yellow background variant should match snapshot 1`] = `
<div>
  <div>
    <div
      data-tw="true"
    >
      <div
        class="w-full mt-72 pt-24 border-t border-neutral-950"
      >
        <div
          class="relative flex items-center justify-between gap-24 py-32 px-16 md:p-32 bg-[url("/pf/resources/images/ln-fondo-radio-amarillo.webp")]"
        >
          <div
            class="flex gap-16 items-center z-10"
          >
            <img
              alt="Imagen de radio"
              class="h-48 md:h-71"
              loading="lazy"
              src="/test-path/resources/images/ln-radio.svg"
            />
            <span
              class="hidden md:block text-body-lg font-bold"
            >
              El mundo necesita más música
            </span>
          </div>
          <a
            class="ds-button relative overflow-hidden inline-flex items-center justify-center gap-8 whitespace-nowrap transition-colors cursor-pointer [&_svg]:pointer-events-none [&_svg]:shrink-0 font-bold uppercase rounded-80 text-12 md:text-16 z-10 px-16 py-12 bg-black-default text-ln-radio"
            data-disabled="false"
            href="https://masmusica.lanacion.com.ar/"
            rel="noreferrer"
            target="_blank"
            title="Ir a escuchar más música"
          >
            Escuchá + música
            <mock-ds-common-icon
              class="hidden md:block"
              name="play-filled"
              size="20"
            />
          </a>
        </div>
        <hr
          aria-orientation="horizontal"
          class="ds-divider border-0 bg-muted w-full h-1"
          role="separator"
        />
      </div>
    </div>
  </div>
</div>
`;
